src/build.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wave-build
  labels:
    app: wave-app
