src/create.yml
---
# the app main namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ${WAVE_NAMESPACE}
  labels:
    app: wave-app
