src/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wave
  namespace: "${WAVE_NAMESPACE}"
  labels:
    app: wave-app
spec:
  selector:
    matchLabels:
      app: wave-app
  template:
    metadata:
      labels:
        app: wave-app
    spec:
      imagePullSecrets:
        - name: seqera-reg-creds
      serviceAccountName: wave-sa
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - image: cr.seqera.io/private/nf-tower-enterprise/wave:v1.3.3
          name: wave-app
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: "4000Mi"
            limits:
              memory: "4000Mi"
          workingDir: "/work"
          volumeMounts:
            - name: "vol-build"
              mountPath: "/efs/wave"
            - name: wave-cfg
              mountPath: /work/config.yml
              subPath: "config.yml"
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 10
      volumes:
        - name: vol-build
          persistentVolumeClaim:
            claimName: wave-app-fs
        - name: wave-cfg
          configMap:
            name: wave-cfg
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wave
  namespace: "${WAVE_NAMESPACE}"
spec:
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  type: NodePort
  selector:
    app: "wave-app"
...
