src/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "${AWS_CERTIFICATE_ARN}"
    alb.ingress.kubernetes.io/group.name: "wave-alb"
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: |-
      idle_timeout.timeout_seconds=910, routing.http2.enabled=false
      , deletion_protection.enabled=true
      , routing.http.drop_invalid_header_fields.enabled=true
      , access_logs.s3.enabled=true,access_logs.s3.bucket=${WAVE_LOGS_BUCKET},access_logs.s3.prefix=alb
    alb.ingress.kubernetes.io/load-balancer-name: wave-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
  name: wave-ingress
  namespace: wave-deploy
spec:
  rules:
    - host: "${WAVE_HOSTNAME}"
      http:
        paths:
          - backend:
              service:
                name: wave
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
...
